sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: ')' expected but '}' found.
}
^AlgBubbleSort1:11: error: Unmatched closing brace '}' ignored here
} 
^AlgBubbleSort1:14: error: eof expected but '}' found.
}
^